add first changes
    * reformat code to be more eye-candy ;)
    * Let the Gmetric Class inherit from object
    * rename the "type" Gmetric Class attribute to "types",
      which is more secure (can not be missinterpreted
      with the builtin "type" call).
    * changes Exceptions to use string formatiing and uses ', '.join()
      to concate list entries.
    * use ' for strings insted of " (which is just a personal choice)
    * using "if not NAME" insted of "if len(NAME) == 0"
    * fix a bug with self.slope.keys() which does not exists in
    * Gmetric.send
    * refactor everything to fullfil the 80 chars per line limit
    * add short args to OptionParser (where possible)
    * add a version string (usable for gmetric --version)

--- a/README
+++ b/README
@@ -1,17 +1,6 @@
-This is the official repository for hosting all other user-contributed tools and programs.
+This is not the official ganglia repository.
+This is just a python lib and cmd tool simply striped out from:
 
-To have your programs added here, please fork the repository, create separate sub-directories for each program 
-and submit a pull request.
+    https://github.com/ganglia/ganglia_contrib.git
 
-If you have any questions, you could reach us at:
-
-ganglia-developers@lists.sourceforge.net
-
-(subscription required: http://lists.sourceforge.net/lists/listinfo/ganglia-developers)
-
-Alternatively, you could join our IRC channel on irc.freenode.net #ganglia and
-ping one of the developers.
-
-Thank you for your contribution!
-
-  -- Ganglia Development Team
+Thanks the ganglia dev team for their good work!
