fixed typo in the README

--- a/README
+++ b/README
@@ -3,4 +3,4 @@ This is just a python lib and cmd tool simply striped out from:
 
     https://github.com/ganglia/ganglia_contrib.git
 
-Thanks the ganglia dev team for their good work!
+Thanks to the ganglia dev team for their good work!
